# uni-project

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  _endl.asm  compile.sh  documentation.tex  program  program.edel  program.txt  test.asm  visualise.sh
assembler/: CMakeLists.txt  assembler.cpp  main.cpp  test.cpp
assembler/lib/: syscall.asm
assembler/src/: assembler_data.cpp  assembler_data.hpp  chunk.cpp  chunk.hpp  cli_arguments.hpp  cli_options.hpp  label.hpp  parser.cpp  parser.hpp
assembler/src/instructions/: argument.cpp  argument.hpp  extra.cpp  extra.hpp  instruction.cpp  instruction.hpp  signature.hpp  transform.cpp  transform.hpp  variables.cpp
assembler/src/messages/: error.cpp  error.hpp  list.cpp  list.hpp  message.cpp  message.hpp
assembler/src/pre-process/: constant.hpp  data.cpp  data.hpp  line.cpp  line.hpp  location-info.hpp  macro.hpp  pre-processor.cpp  pre-processor.hpp
compiler/: CMakeLists.txt  main.cpp
compiler/examples/: factorial.edel  let-type-hinting.edel  nested-call.edel  overloaded-add.edel  sum_array.edel  sum_numbers.edel  swap-numbers.edel
compiler/src/: config.hpp  context.hpp  message_helper.cpp  message_helper.hpp  parser.cpp  parser.hpp  printable_entity.hpp
compiler/src/assembly/: arg.cpp  arg.hpp  basic_block.cpp  create.cpp  create.hpp  line.hpp  program.cpp
compiler/src/ast/: block.cpp  block.hpp  namespace.cpp  node.cpp  node.hpp  operator.cpp  operator.hpp  program.cpp  program.hpp  symbol_declaration.cpp  symbol_declaration.hpp
compiler/src/control-flow/: conditional_context.cpp  loop_context.hpp
compiler/src/lexer/: lexer.cpp  token_type.hpp
compiler/src/memory/: literal.cpp  literal.hpp  reg_alloc.cpp  reg_alloc.hpp  storage_location.cpp  storage_location.hpp
compiler/src/operators/: builtin.hpp  builtins.cpp  builtins.hpp  operator.cpp  operator.hpp  user_defined.hpp
compiler/src/symbol/: function.cpp  function.hpp  registry.cpp  registry.hpp  symbol.cpp  symbol.hpp  table.cpp  table.hpp
compiler/src/types/: array.cpp  array.hpp  bool.cpp  bool.hpp  float.cpp  float.hpp  function.cpp  function.hpp  graph.cpp  graph.hpp  int.cpp  int.hpp  namespace.cpp  namespace.hpp  node.cpp  node.hpp  pointer.cpp  pointer.hpp  unit.cpp  unit.hpp  wrapper.cpp  wrapper.hpp
compiler/src/value/: future.hpp  lvalue.hpp  materialisation_options.hpp  rvalue.hpp  value.cpp  value.hpp
compiler/tests/arrays/: assign-different-sizes.edel  assign.edel  decl-local.edel  decl.edel  no-size.edel  zero-size.edel
compiler/tests/break-and-continue/: break.edel
compiler/tests/functions/: ambiguous_reference.edel  define_func_unused.edel  define_func_used.edel  define_overloads.edel  define_procedure.edel  mismatch_return_type.edel  missing_return.edel  overload_already_exists.edel  underscore_as_name.edel
compiler/tests/if_statements/: if_expression.edel  multi_if_else_statement.edel  not_rel_op_guard.edel  rel_op_guard.edel  type_mismatch.edel
compiler/tests/namespace/: assign.edel  definition_property.edel  empty_definition.edel  merge_namespaces.edel  nested_explicit.edel
compiler/tests/symbols/: member_access_undefined.edel
compiler/tests/var_decl/: const.edel  global_initialisation.edel  local_shadowing_fail.edel  no_type_or_initialiser.edel  uninitialised_const.edel
compiler/tests/while/: nested.edel
language/: .gitignore  CMakeLists.txt  main.cpp
language/examples/: overloaded-add.edel
language/src/: LanguageOptions.cpp  LanguageOptions.hpp  Program.hpp  Source.hpp  config.cpp  config.hpp  context.hpp  lexer.cpp  lexer.hpp  lint.cpp  lint.hpp  message_helper.cpp  message_helper.hpp  parser.cpp  parser.hpp
language/src/assembly/: arg.cpp  arg.hpp  basic_block.cpp  basic_block.hpp  create.cpp  create.hpp  directive.cpp  directive.hpp  instruction.cpp  instruction.hpp  instructions.cpp  instructions.hpp  line.hpp  program.cpp  program.hpp
language/src/ast/: block.cpp  block.hpp  conditional_context.cpp  conditional_context.hpp  expr.cpp  expr.hpp  function.cpp  function.hpp  function_base.cpp  function_base.hpp  if_else.cpp  if_else.hpp  if_statement.cpp  if_statement.hpp  namespace.cpp  namespace.hpp  node.cpp  node.hpp  operator.cpp  operator.hpp  operator_definition.cpp  operator_definition.hpp  program.cpp  program.hpp  return.cpp  return.hpp  symbol_declaration.cpp  symbol_declaration.hpp  while_statement.cpp  while_statement.hpp
language/src/compiler/: CompiledProgram.cpp
language/src/control-flow/: conditional_context.cpp  conditional_context.hpp  loop_context.cpp  loop_context.hpp
language/src/lexer/: Lexer.cpp  Token.hpp  lexer.cpp  lexer.hpp  token.hpp  token_type.hpp
language/src/memory/: literal.cpp  literal.hpp  ref.hpp  reg_alloc.cpp  reg_alloc.hpp  stack.cpp  stack.hpp  storage_location.cpp  storage_location.hpp
language/src/operators/: builtin.hpp  builtins.cpp  builtins.hpp  info.hpp  operator.cpp  operator.hpp  user_defined.hpp
language/src/parser/: Parser.cpp  Scope.hpp  ScopeManager.cpp  ScopeManager.hpp  SymbolDeclaration.hpp
language/src/statement/: Function.cpp  FunctionCall.hpp  SymbolRef.hpp  compile.cpp
language/src/symbol/: function.cpp  function.hpp  namespace.cpp  namespace.hpp  registry.cpp  registry.hpp  symbol.cpp  symbol.hpp  table.cpp  table.hpp  variable.hpp
language/src/types/: FunctionType.cpp  FunctionType.hpp  Type.hpp
language/src/value/: future.hpp  literal.hpp  lvalue.hpp  materialisation_options.hpp  rvalue.hpp  symbol.hpp  temporary.hpp  value.cpp  (+1 more)
processor/: CMakeLists.txt  main.c  main.cpp  test.c
processor/src/: arg.c  arg.h  bus.c  bus.cpp  bus.h  bus.hpp  cli_arguments.hpp  constants.h  constants.hpp  core.cpp  core.hpp  cpu.c  cpu.cpp  cpu.h  cpu.hpp  debug.cpp  debug.h  debug.hpp  dram.c  dram.cpp  dram.h  dram.hpp  instructions.h  registers.h  util.c  util.h
visualiser/: CMakeLists.txt  main.cpp
visualiser/src/: assembly.cpp  assembly.hpp  cli_arguments.hpp  custom_dropdown.cpp  custom_dropdown.hpp  data.cpp  data.hpp  processor.cpp  processor.hpp  screen.cpp  screen.hpp  sources.cpp  sources.hpp  style.cpp  style.hpp
(+245 files in other folders)
